--- a/Vermilion.WebApi/Vermilion.WebApi.csproj
+++ b/Vermilion.WebApi/Vermilion.WebApi.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Vermilion.Infrastructure\Vermilion.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
