--- a/Vermilion.Domain/Vermilion.Domain.csproj
+++ b/Vermilion.Domain/Vermilion.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" Version="4.5.0" />
+    <PackageReference Include="Ardalis.Specification" Version="8.0.0" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="9.22.0.87781">
