--- a/Vermilion.Contracts/Vermilion.Contracts.csproj
+++ b/Vermilion.Contracts/Vermilion.Contracts.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Vermilion.Domain\Vermilion.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
