--- a/Vermilion.WebApi/appsettings.json
+++ b/Vermilion.WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "pg-connection": "Host=vermilion-database;Port=5432; Database=vermilion-db; Username=postgres; Password=postgres",
-    "pg-local": "Host=localhost;Port=5432; Database=VermilionTestDb; Username=postgres; Password=postgres"
+    "pg-local": "Host=localhost;Port=5432; Database=VermilionTestDb; Username=postgres; Password=postgres",
     "redis": "vermilion-cache:6379"
   },
   "Serilog": {
