feat: added mass transit&rabbitmq implementation

--- a/Vermilion.WebApi/appsettings.Development.json
+++ b/Vermilion.WebApi/appsettings.Development.json
@@ -21,5 +21,10 @@
       }
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "MessageBroker": {
+    "Host": "amqp://vermilion-queue:5672",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
