feat:added minio implementation

--- a/Vermilion.WebApi/appsettings.json
+++ b/Vermilion.WebApi/appsettings.json
@@ -25,7 +25,13 @@
         }
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "MinioOptions": {
+    "Endpoint": "vermilion-minio:9000",
+    "AccessKey": "minio",
+    "SecretKey": "minioroot",
+    "Bucket": "images"
   },
   "AllowedHosts": "*"
 }
