--- a/Vermilion.Application/Vermilion.Application.csproj
+++ b/Vermilion.Application/Vermilion.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Minio" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
