--- a/Vermilion.Contracts/Vermilion.Contracts.csproj
+++ b/Vermilion.Contracts/Vermilion.Contracts.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="Minio" Version="6.0.2" />
   </ItemGroup>
 
   <ItemGroup>
