--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,22 @@ services:
         - 6379:6379
      networks:
       - backend
+   
+  vermilion-minio:
+    image: minio/minio:latest
+    environment:
+      MINIO_ROOT_USER: "minio"
+      MINIO_ROOT_PASSWORD: "minioroot"
+    ports:
+        - 9001:9001
+        - 9000:9000
+    volumes:
+    - minio-data:/data
+    command: server --console-address ":9001" /data
+    networks:
+    - backend
 
 volumes:
   postgres-data: {}
+  minio-data: {}
  
