feat: added event bus implementation with domain events

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,15 +41,21 @@ services:
       - backend
   
   vermilion-mq:
-     image: rabbitmq:latest
+     image: rabbitmq:3.11.7-management
      container_name: vermilion-mq
      hostname: vermilion-queue
      volumes:
-      - ./.containers/queue/data/:/var/lib/rabbitmq
-      - ./.containers/queue/data/:/var/log/rabbitmq
+        - ./.containers/queue/data/:/var/lib/rabbitmq/
+        - ./.containers/queue/log/:/var/log/rabbitmq   
+     ports:
+      - "5672:5672"
+      - "15672:15672"
+     restart: always
      environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+     networks:
+      - backend
 
 volumes:
   postgres-data: {}
