--- a/Vermilion.ApplicationTests/Vermilion.ApplicationTests.csproj
+++ b/Vermilion.ApplicationTests/Vermilion.ApplicationTests.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\Vermilion.WebApi\Vermilion.WebApi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
