--- a/Vermilion.WebApi/appsettings.json
+++ b/Vermilion.WebApi/appsettings.json
@@ -25,7 +25,12 @@
         }
       }
     ],
-    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "MessageBroker": {
+    "Host": "amqp://vermilion-queue:5672",
+    "Username": "guest",
+    "Password": "guest"
   },
   "AllowedHosts": "*"
 }
