fix: rabbitmq version update

--- a/Vermilion.WebApi/appsettings.json
+++ b/Vermilion.WebApi/appsettings.json
@@ -32,5 +32,11 @@
     "Username": "guest",
     "Password": "guest"
   },
+  "MinioOptions": {
+    "Endpoint": "vermilion-minio:9000",
+    "AccessKey": "minio",
+    "SecretKey": "minioroot",
+    "Bucket": "images"
+  },
   "AllowedHosts": "*"
 }
