feat: added auth with jwt token

--- a/Vermilion.WebApi/appsettings.json
+++ b/Vermilion.WebApi/appsettings.json
@@ -38,5 +38,11 @@
     "SecretKey": "minioroot",
     "Bucket": "images"
   },
+  "JwtOptions": {
+    "SecretKey": "supersecretkeythatnobodyfindthere",
+    "Audience": "audience",
+    "Issuer": "issuer",
+    "ExpiredMinutes": 30
+  },
   "AllowedHosts": "*"
 }
