feat: fixes & update

--- a/Vermilion.Contracts/Vermilion.Contracts.csproj
+++ b/Vermilion.Contracts/Vermilion.Contracts.csproj
@@ -13,7 +13,12 @@
     <PackageReference Include="Minio" Version="6.0.2" />
   </ItemGroup>
 
-  <ItemGroup>
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+	</PropertyGroup>
+
+
+	<ItemGroup>
     <ProjectReference Include="..\Vermilion.Domain\Vermilion.Domain.csproj" />
   </ItemGroup>
 
